[metadata]
name = molent
version = 0.0.2
description = Computing molecular information entropies and similarities.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoMeT4MatSci/molent
maintainer = Alexander Croy 
maintainer_email = alexander.croy@uni-jena.de

[options]
packages = find:
python_requires = >=3.8
install_requires =
	numpy
	scipy
